[project]
name = "backend-service"
version = "0.1.0"
description = "Add your description here"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.1",
    "fastapi>=0.120.4",
    "openai>=2.6.1",
    "pydantic[email]>=2.12.3",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.1.9",
    "pypdf2>=3.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

